# renoir-fed-learning

./: Cargo.toml  Needs.csv  README.md  exec_time.csv  loss_test.csv  loss_test.xlsx  renoir_fed_loss_test_all.xlsm  renoir_fed_loss_test_allxls.xlsm  training_log.csv
.VSCodeCounter/2025-06-25_10-55-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
diagrams/: activity.wsd  class.wsd  component.wsd  sequence.wsd  use-case.wsd
local-models/: file.txt
src/: dataset.rs  main.rs  model.rs  training.rs
