[package]
name = "renoir-fed-training"
version = "0.1.0"
edition = "2021"

[dependencies]
renoir = { git = "https://github.com/deib-polimi/renoir", version = "0.3.0" }
burn = {version = "0.15.0", features = ["train"]}
burn-ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"
